--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "autoprefixer": "^10.4.20",
     "cra-template": "1.2.0",
     "luxon": "^3.5.0",
+    "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
@@ -36,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
     "tailwindcss": "^3.4.17"
   }
 }
