--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "version": "2.0.23",
+  "version": "2.1.23",
   "league": "silver",
   "private": true,
   "dependencies": {
@@ -40,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+    "tailwindcss": "^3.4.17"
   }
 }
